force-app/main/default/objects/GWB_Plant_Benchmark__c/GWB_Plant_Benchmark__c.object-meta.xml
<CustomObject>
    <label>Plant Benchmark</label>
    <nameField>
        <label>Benchmark Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Benchmarks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>