force-app/main/default/objects/GWB_Plant_Benchmark__c/fields/Achieved_FTE__c.field-meta.xml
<CustomField>
    <fullName>Achieved_FTE__c</fullName>
    <label>Achieved FTE</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>