force-app/main/default/objects/GWB_Plant_Benchmark__c/fields/Idea_Library__c.field-meta.xml
<CustomField>
    <fullName>Idea_Library__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Idea Library</label>
    <referenceTo>GWB_Idea_Library__c</referenceTo>
    <relationshipLabel>Benchmarks</relationshipLabel>
    <relationshipName>Benchmarks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>