force-app/main/default/objects/GWB_Plant_Benchmark__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>GWB_Plant__c</referenceTo>
    <relationshipLabel>Plant Benchmarks</relationshipLabel>
    <relationshipName>Plant_Benchmarks</relationshipName>
    <type>Lookup</type>
</CustomField>