force-app/main/default/objects/GWB_Plant_Benchmark__c/fields/Production_Context__c.field-meta.xml
<CustomField>
    <fullName>Production_Context__c</fullName>
    <label>Production Context</label>
    <length>255</length>
    <type>Text</type>
</CustomField>