force-app/main/default/objects/GWB_Plant_Benchmark__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <label>Quarter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>