force-app/main/default/objects/GWB_Plant_Benchmark__c/fields/Shop_Type__c.field-meta.xml
<CustomField>
    <fullName>Shop_Type__c</fullName>
    <label>Shop Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>Stamping</fullName>
            </value>
            <value>
                <fullName>Powertrain</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>