force-app/main/default/objects/GWB_Plant_Benchmark__c/listViews/All_Benchmarks.listView-meta.xml
<ListView>
    <fullName>All_Benchmarks</fullName>
    <label>All Benchmarks</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Idea_Library__c</columns>
    <columns>Shop_Type__c</columns>
    <columns>Achieved_FTE__c</columns>
    <columns>Quarter__c</columns>
    <sharedTo><allInternalUsers/></sharedTo>
</ListView>